BambooCardTask.Infra/infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bamboocard-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bamboocard-api
  template:
    metadata:
      labels:
        app: bamboocard-api
    spec:
      containers:
        - name: bamboocard-api
          image: <aws_account_id>.dkr.ecr.<region>.amazonaws.com/bamboocard-api:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
