BambooCardTask.Infra/infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bamboocard-api
spec:
  type: LoadBalancer
  selector:
    app: bamboocard-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
